# c3

./: .gitignore  C3_SPEC.md  CONTRIBUTING.md  Dockerfile  README.md  RESEARCH_HANDOFF.md  ROADMAP.md  pyproject.toml  test_ablation_run.py  test_gemini.py
.github/workflows/: ci.yml
analyzer/: analyzer.py  gate.py
api/: server.py
benchmarks/: ablation.py  collector.py  fixed_pipeline.py  results.json  runner.py  suite.json  vanilla_baseline.py
benchmarks/data/: bbh_slice.json  gsm8k_slice.json  hotpot_slice.json  judge.py  planning_curated.json  triviaqa_subset.json
cli/: main.py
compiler/: __init__.py  analyzer.py  compiler.py  interfaces.py  validator.py
core/: context.py  observability.py
docs/: 01_Vision.md  02_Problem_Statement.md  03_System_Architecture.md  04_MVP.md  05_Tech_Stack.md  COMPILER_SPEC.md  PRIMITIVE_ISA.md  RIR_V1_SPEC.md  RPS_SPEC.md  STRATEGY_SPEC.md  animated_architecture.html
metrics/: diversity.py  ere.py  graph_metrics.py  report.py
models/: problem.py
operators/: config.py  interfaces.py  library.py  mock_library.py  placeholder.py
operators/live/: execution.py  reasoning.py  retrieval.py  verification.py
optimizer/: optimizer.py
optimizer/passes/: base.py  dead_node.py  verify_fusion.py
paper/: paper.md
planner/: cost_model.py  planner.py
rir/: __init__.py  graph.py
runtime/: executor.py  interfaces.py
tests/: test_executor.py  test_ir.py  test_operator.py
ui/: index.html
verification/: report.py
visualization/: exporter.py
