[project]
name = "c3"
version = "0.1.0"
description = "Compiler-driven reasoning graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "networkx>=3.3",
    "pydantic>=2.8.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "hypothesis>=6.112.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["compiler", "runtime", "operators", "planner", "tests", "core", "ir", "models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
